--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <title>Nick's Website</title>
 </head>
 <body>
-Hello, World!
-</body>
+  <h1>This is heading 1.</h1>
+  <p>
+    This<br/>
+    Will<br/>
+    Print<br/>
+    On<br/>
+    Different<br/>
+    Lines!<br/>
+  </p>
+  <hr/>
+  <h2>This is heading 2.</h2>
+  <h3>This is heading 3.</h3>
+ </body>
 </html>
