--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
 <body>
   <h1>This is heading 1.</h1>
   <p>
-    This<br/>
-    Will<br/>
-    Print<br/>
-    On<br/>
-    Different<br/>
-    Lines!<br/>
+  <p> <b> <i> Welcome To Nick's Website </i> <b/>
   </p>
   <hr/>
-  <h2>This is heading 2.</h2>
-  <h3>This is heading 3.</h3>
+  <h2> <i> <u> Yeet </u> </i></h2>
+    <h3> <i> <u> Yote </u> </i> </h3>
  </body>
 </html>
