--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Nick's Website</title>
 </head>
 <body>
-  <h1>This is heading 1.</h1>
+  <h1>Hello!</h1>
   <p>
   <p> <b> <i> Welcome To Nick's Website </i> <b/>
   </p>
