--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Nick's Website</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
   <h1>Hello!</h1>
