--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-  <img src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiPjIe1qoTfAhUFm-AKHdDbDBUQjRx6BAgBEAU&url=https%3A%2F%2Ffunny.blognook.com%2F2017%2F07%2F31%2Fkachigga-ma-ni%25F0%259F%2585%25B1%25EF%25B8%258F%25F0%259F%2585%25B1%25EF%25B8%258Fa%2F&psig=AOvVaw2dOPeOOK2W9owvAuOVvh6_&ust=1543949485386699">
+  <img src = "">
   <img src = "">
   <h1>Hello!</h1>
   <p>
   <p> <b> <i> Welcome To Nick's Website </i> <b/>
   </p>
   <hr/>
-  <h2> <i> <u> Yeet </u> </i></h2>
-    <h3> <i> <u> Yote </u> </i> </h3> 
+  <h2> <i>  Howdy  </i></h2>
+    <h3> <i>    </i> </h3> 
  </body>
 </html>
