--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <img src = "">
   <img src = "">
+  <a href="url">link text</a>
   <h1>Hello!</h1>
   <p>
   <p> <b> <i> Welcome To Nick's Website </i> <b/>
