--- a/SnapPortfolio.html
+++ b/SnapPortfolio.html
@@ -6,6 +6,7 @@
  </head>
  <body>
   <h1>Nick's SNAP Projects</h>
+  <a href="Ncharles1218.github.io">Home</a>
   <a href="https://snap.berkeley.edu/snapsource/snap.html#present:Username=ncharles&ProjectName=Hangman">HangMan</a>
  </body>
 </html>
