--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <img src = "">
   <img src = "">
   <a href="url">link text</a>
-  <a href="Ncharles1218.github.io/SnapPortfolio.html">Snap Portfolio</a>
+  <a href="index.html">home</a>
   <h1>Hello!</h1>
   <p>
   <p> <b> <i> Welcome To Nick's Website </i> <b/>
