--- a/SnapPortfolio.html
+++ b/SnapPortfolio.html
@@ -8,5 +8,7 @@
   <h1>Nick's SNAP Projects</h>
   <a href="Ncharles1218.github.io">Home</a>
   <a href="https://snap.berkeley.edu/snapsource/snap.html#present:Username=ncharles&ProjectName=Hangman">HangMan</a>
+  <a href="https://snap.berkeley.edu/snapsource/snap.html#present:Username=ncharles&ProjectName=Squares">Squares</a>
+  <a href="https://snap.berkeley.edu/snapsource/snap.html#present:Username=ncharles&ProjectName=PlatForm%20Game">Platform Game</a>
  </body>
 </html>
