--- a/bounce.html
+++ b/bounce.html
@@ -25,7 +25,7 @@
       function drawball(context) {
         //Move the ball
         ballX = ballX + dx;
-        ballY = ballX + dy;
+        ballY = ballY + dy;
         // If we've hit the top or bottom, turn around
         if (ballx > CANVAS_WIDTH || ballx < 0) {
         dx = -dx;
