--- a/bounce.html
+++ b/bounce.html
@@ -31,13 +31,13 @@
         dx = -dx;
       }
       // If we've hit the top or bottom, turn around
-      if (ballx > CANVAS_EIGHT || bally < 0) {
+      if (bally > CANVAS_EIGHT || bally < 0) {
       dy = -dy;
     }
     // Actually draw the ball
     context.beginpath();
     context.fillstyle = BALL_COLOR;
-    context.arc(ballx, ballY, BALL_RADIUS, 0, 2 * Math.PI, true);
+    context.arc(ballx, bally, BALL_RADIUS, 0, 2 * Math.PI, true);
     context.closepath();
     context.fill();
   }
