--- a/bounce.html
+++ b/bounce.html
@@ -13,10 +13,12 @@
       var BALL_RADIUS2 = 15;
       // Color of the ball
       var BALL_COLOR = "#0000ff";
-      var BALL_COLOR2 = "#0000ff";e
+      var BALL_COLOR2 = "#0000ff";
       // The x and y position of the ball. Start in the center
       var ballX = CANVAS_WIDTH / 2;
       var ballY = CANVAS_HEIGHT / 2;
+      var ballX2 = CANVAS_WIDTH / 2;
+      var ballY2 = CANVAS_HEIGHT / 2;
       // The current speed of the ball
       var dx = 1;
       var dy = 5;
