--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
   <hr/>
   <h2> <i>  Howdy  </i></h2>
     <h3> <i>    </i> </h3> 
+  <script>
+    var message = "hello world!";
+    console.log(message);
+  </script>
  </body>
 </html>
