--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
   <h2> <i>  Howdy  </i></h2>
     <h3> <i>    </i> </h3> 
   <script>
-    var message = "hello world!";
-    console.log(message);
+    var name = "nicolas";
+    console.log("Hello + + name);
+    if(name.length > 7)
+    {
+      console.log("wow, you have a long name!";
+    }
   </script>
  </body>
 </html>
