--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h3> <i>    </i> </h3> 
   <script>
     var name = "nicolas";
-    console.log("Hello + + name);
+    console.log("Hello " + name);
     if(name.length > 7)
     {
       console.log("wow, you have a long name!";
