--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     if(name.length > 7)
     {
       console.log("wow, you have a long name!";
+    }else{
+      console.log("your name isn't very long.");
     }
   </script>
  </body>
