--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
     }else{
       console.log("your name isn't very long.");
     }
+    var chicken = false;
+    var beef = true;
+    var pork = true;
+    if(chicken) {
+      console.log("i'm having chicken!");
+    }else if(beef){
+      console.log("I'm having beef!");
+    }else if(pork){
+      console.log("i'm having pork!");
+    }else{
+      console.log("I guess im having rice...");
+    }
   </script>
  </body>
 </html>
