--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     while(i <= 10){
       console.log(i)
       i++;
+    }
+    var name = "joy";
+    for(var i = 0; i < name.length; i++)
+    {
+      console.log("give me a "+name[i]);
+    }
+    console.log("go " +name+"!");
   </script>
  </body>
 </html>
