--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       console.log("give me a "+name[i]);
     }
     console.log("go " +name+"!");
+    
+    for(var i = 1; i < 10000; i *= 2)
+   
   </script>
  </body>
 </html>
