--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <img src = "">
   <a href="url">link text</a>
   <a href="index.html">home</a>
+  <a href="SnapPortfolio.html">Snap Portfolio</a>
+  <a href="hangman.html">play hangman</a>
   <h1>Hello!</h1>
   <p>
   <p> <b> <i> Welcome To Nick's Website </i> <b/>
