--- a/experimentDOM.html
+++ b/experimentDOM.html
@@ -8,7 +8,7 @@
     <h1 id = "main-heading">Hello World!</h1>
     
     <script>
-      var headingelement = document.getelementbyid("main-heading");
+      var headingelement = document.getElementById("main-heading");
       //finding the h1 element with the id "main-heading"
       console.log(headingelement.innerHTML);
       var newheadingtext = prompt("please provide a new heading:");
