--- a/experimentDOM.html
+++ b/experimentDOM.html
@@ -14,6 +14,12 @@
       // asking for the new header
      $("#main-heading").text(newheadingtext);
       $("body").append("<p>This is a new paragraph.</p>");
+      for (var i = 0; i <3; i++)
+      {
+        // start counting at 0
+        var hobby = prompt("tell me about one of your hobbies.");
+        $("body").append("<p>" + hobby + "</p>;
+      }
      </script>
      
     </body>
