--- a/experimentDOM.html
+++ b/experimentDOM.html
@@ -18,7 +18,7 @@
       {
         // start counting at 0
         var hobby = prompt("tell me about one of your hobbies.");
-        $("body").append("<p>" + hobby + "</p>";
+        $("body").append("<p>" + hobby + "</p>");
       }
      </script>
      
