--- a/experimentDOM.html
+++ b/experimentDOM.html
@@ -22,7 +22,10 @@
       }
       
       $("body").append("<h1> This will fade out! </h1>");
-      $("h1").fadeOut(3000).fadeIn(2000);
+      for( var i = 0; i < 5; i++)
+      {
+        $("h1").fadeOut(2000).fadeIn(2000);
+      }
       $("h1").slideUp(1000).slideDown(1000);
      </script>
      
