--- a/experimentDOM.html
+++ b/experimentDOM.html
@@ -42,7 +42,7 @@
       {
         $("body").append("<p> You have been staring"+
                          " at your screen for "
-                         +counter+" seconds. </p>;
+                         +counter+" seconds. </p>");
       }; 
                        
       
