--- a/treasure.html
+++ b/treasure.html
@@ -5,7 +5,7 @@
     </head>
     <body>
       <h1 id = :heading">find the hidden treasure!</h1>
-      <img id = "map"> width=400 height=400
+      <img id = "map" width=400 height=400
         src="https://nostarch.com/images/treasuremap.png">
         
         <p id="distance"></p>
