--- a/treasure.html
+++ b/treasure.html
@@ -56,6 +56,9 @@
            }else if (distance >=101)
              alert("You need to keep looking!");
       }
+                      }
+                       if (distance <= 5)
+      alert("you found the treasure!");
                       }); 
         clicks++;
       });
