--- a/cars.html
+++ b/cars.html
@@ -21,7 +21,7 @@
     // lets create a method to draw a new car
     var drawCar = function(car)
     {
-      var carHtml = '<img src="https:// nostarch.com/images/car.png">':
+      var carHtml = '<img src="https:// nostarch.com/images/car.png">';
       
       var carElement = $(carHtml);
       
