--- a/cars.html
+++ b/cars.html
@@ -37,6 +37,12 @@
     drawCar(tesla);
     var nissan = new Car(100, 200);
     drawCar(nissan);
+    var charger = new Car(200, 500);
+    drawCar(charger);
+    var lambo = new Car(500, 700);
+    drawCar(lambo);
+    var bugatti = new Car(400, 800);
+    drawCar(bugatti);
     </script>
   </body>
  </html>
