--- a/FirstCanvas.html
+++ b/FirstCanvas.html
@@ -11,7 +11,7 @@
       var ctx = canvas.getContext("2d"); // tells javascript that the drawing will be 2 dimensional
       ctx.fillRect(100, 0, 50, 50); // draw and fill a rectangle, at (0,0) with sides of length 10 and 20
       ctx.fillRect(115, 50, 20, 20)
-      
+      ctx.fillRect(25, 70, 200, 20)
     </script>
   </body>
 </html>
