--- a/FirstCanvas.html
+++ b/FirstCanvas.html
@@ -9,6 +9,14 @@
     <script>
       var canvas = document.getElementById("canvas"); // look for canvas
       var ctx = canvas.getContext("2d"); // tells javascript that the drawing will be 2 dimensional
+      // ctx.fillRect(x-coord, y-coord, width in pixels, height in pixels);
+      ctx.fillStyle = "blue";
+      ctx.fillRect(0,0, 133, 400);
+      ctx.fillStyle = "red";
+      ctx.fillRect(134,0,133,400);
+      ctx.fillStyle = "orange";
+      ctx.fillRect(268,0,133,400);
+      ctx.fillStyle = "black";
       ctx.fillRect(100, 0, 50, 50); // draw and fill a rectangle, at (0,0) with sides of length 10 and 20
       ctx.fillRect(115, 50, 20, 20)
       ctx.fillRect(25, 70, 200, 20)
