--- a/FirstCanvas.html
+++ b/FirstCanvas.html
@@ -16,7 +16,7 @@
       ctx.fillRect(134,0,133,400);
       ctx.fillStyle = "orange";
       ctx.fillRect(268,0,133,400);
-      ctx.fillStyle = "black";
+      ctx.fillStyle = "green";
       ctx.fillRect(100, 0, 50, 50); // draw and fill a rectangle, at (0,0) with sides of length 10 and 20
       ctx.fillRect(115, 50, 20, 20)
       ctx.fillRect(25, 70, 200, 20)
